# coldfront_native_plugin

./: pyproject.toml  settings.py
coldfront_native_plugin/: apps.py  settings.py  urls.py  views.py
coldfront_native_plugin/templates/coldfront_native_plugin/: demo.html
